Update Sass organization

--- a/public/app/sass/styles.scss
+++ b/public/app/sass/styles.scss
@@ -3,4 +3,9 @@
 //////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////
 
-@import 'helpers/*';
+// Organization is based on Sass Guidelines
+// Documentation and what each folder should contain can be found
+// at the following link:
+// http://sass-guidelin.es/#the-7-1-pattern
+
+@import 'utils/*';
