--- a/resources/views/_layouts/global.twig
+++ b/resources/views/_layouts/global.twig
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="{{ assets.main.css }}">
 </head>
 <body>
+    {% block content %}{% endblock %}
 
     <script src="{{ assets.main.js }}"></script>
 </body>
