Add Laravel welcome page style

--- a/resources/views/welcome.twig
+++ b/resources/views/welcome.twig
@@ -1,5 +1,30 @@
 {% extends '_layouts.global' %}
 
 {% block content %}
-    <h1>Welcome</h1>
+    <div class="flex-center position-ref full-height">
+        {% if Route.has('login') %}
+        <div class="top-right links">
+            {% if Auth.check() %}
+            <a href="{{ url('/home') |raw }}">Home</a>
+            {% else %}
+            <a href="{{ url('/login') |raw }}">Login</a>
+            <a href="{{ url('/register') |raw }}">Register</a>
+            {% endif %}
+        </div>
+        {% endif %}
+
+        <div class="content">
+            <div class="title m-b-md">
+                Laravel
+            </div>
+
+            <div class="links">
+                <a href="https://laravel.com/docs">Documentation</a>
+                <a href="https://laracasts.com">Laracasts</a>
+                <a href="https://laravel-news.com">News</a>
+                <a href="https://forge.laravel.com">Forge</a>
+                <a href="https://github.com/laravel/laravel">GitHub</a>
+            </div>
+        </div>
+    </div>
 {% endblock %}
