--- a/resources/views/_layouts/global.twig
+++ b/resources/views/_layouts/global.twig
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway:100,600" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{{ assets.main.css }}">
 </head>
 <body>
